# ov7670-rp2040-test

./: .gitignore  CMakeLists.txt  README.md
include/: ov7670.h
src/: CMakeLists.txt  capture.pio  ov7670.c  ov7670_internals.h
test/: CMakeLists.txt
test/ov7076_i2c/: CMakeLists.txt
test/ov7076_img_tx/: CMakeLists.txt  conv.py  img.h  img_tx.c
test/ov7670_i2c/: ov7670_i2c.c
test/ov7670_img_capture/: CMakeLists.txt  ov7670_capture.c  ov7670_capture.h  test_rx.py
test/ov7670_img_tx/: CMakeLists.txt  conv.py  img.h  img_tx.c  rx.py
test/ov7670_test_img/: CMakeLists.txt  test.c  test.py
test/ov7670_test_pattern/: CMakeLists.txt  ov7670_test_pattern.c  test_rx.py
